# orka

./: SECURITY.md  Sobre a Orka  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  billing.py  dashboard.py  decisions.py  integrations.py  ml.py  notifications.py  reports.py
backend/app/core/: audit.py  config.py  deps.py  security.py
backend/app/integrations/amazon/: integration.py
backend/app/integrations/shopify/: integration.py
backend/app/models/: __init__.py  integration.py  sales.py  user.py
backend/app/services/: decision.py  integration.py  metrics.py  ml.py  notification.py  report.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 9952dbebbe27_add_extra_data_to_integrations.py  a3f7c9d2e841_add_plan_and_subscription_to_org.py
backend/scripts/: setup_dev.sh
frontend/: Dockerfile  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/billing/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/build-in-public/: page.tsx
frontend/src/components/landing/: DashboardMockup.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Pricing.tsx  Testimonials.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Spinner.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: auth.ts
(+6 files in other folders)
